<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollIndicators="none"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

<!--    AppBar Section-->
        <TextView
            android:id="@+id/hai_ardanu_"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_hai_ardanu"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/mau_makan_apa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_mau_makan_apa"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/hai_ardanu_" />

        <ImageButton
            android:id="@+id/cart"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@android:color/transparent"
            android:contentDescription="Cart Button"
            android:src="@drawable/ic_cart"
            app:layout_constraintBottom_toBottomOf="@+id/hai_ardanu_"
            app:layout_constraintEnd_toStartOf="@+id/profile"
            app:layout_constraintTop_toTopOf="@+id/hai_ardanu_" />

        <ImageButton
            android:id="@+id/profile"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_alignParentEnd="true"
            android:background="@android:color/transparent"
            android:contentDescription="Profile Button"
            android:src="@drawable/ic_profile"
            app:layout_constraintBottom_toBottomOf="@+id/cart"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/cart" />

<!--    End of AppBar Section-->

<!--    Banner Section    -->

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:layout_marginTop="24dp"
            android:scaleType="centerCrop"
            android:src="@drawable/banner_discount"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mau_makan_apa" />

        <ImageView
            android:id="@+id/diskon_img"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="36dp"
            android:src="@drawable/ic_diskon"
            app:layout_constraintBottom_toBottomOf="@+id/imageView"
            app:layout_constraintStart_toStartOf="@+id/imageView"
            app:layout_constraintTop_toTopOf="@+id/imageView" />

        <TextView
            android:id="@+id/diskon_30_"
            android:layout_width="129dp"
            android:layout_height="35dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="28dp"
            android:layout_toRightOf="@+id/diskon_img"
            android:text="@string/string_diskon_30"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/diskon_img"
            app:layout_constraintTop_toTopOf="@+id/imageView" />

        <TextView
            android:id="@+id/diskon_detail"
            android:layout_width="199dp"
            android:layout_height="38dp"
            android:layout_below="@id/diskon_30_"
            android:layout_marginStart="24dp"
            android:layout_toRightOf="@+id/diskon_img"
            android:text="@string/string_pesan_makanan"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/diskon_img"
            app:layout_constraintTop_toBottomOf="@+id/diskon_30_" />

<!--    End of Banner Section-->

<!--    Category Section-->
        <ImageView
            android:id="@+id/img_ayam"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:layout_marginTop="24dp"
            android:layout_marginRight="12dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ayam"
            app:layout_constraintEnd_toStartOf="@id/img_mie"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imageView" />

        <TextView
            android:id="@+id/ayam"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|bottom"
            android:text="@string/text_ayam"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="@+id/img_ayam"
            app:layout_constraintStart_toStartOf="@+id/img_ayam"
            app:layout_constraintTop_toBottomOf="@+id/img_ayam" />

        <ImageView
            android:id="@+id/img_mie"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:layout_marginHorizontal="12dp"
            android:layout_marginTop="24dp"
            android:scaleType="centerCrop"
            android:src="@drawable/mie"
            app:layout_constraintEnd_toStartOf="@id/img_minuman"
            app:layout_constraintStart_toEndOf="@+id/img_ayam"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <TextView
            android:id="@+id/mie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|bottom"
            android:text="@string/text_mie"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="@+id/img_mie"
            app:layout_constraintStart_toStartOf="@+id/img_mie"
            app:layout_constraintTop_toBottomOf="@+id/img_mie" />

        <ImageView
            android:id="@+id/img_minuman"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:layout_marginHorizontal="12dp"
            android:layout_marginTop="24dp"
            android:scaleType="centerCrop"
            android:src="@drawable/minuman"
            app:layout_constraintEnd_toStartOf="@id/img_snack"
            app:layout_constraintStart_toEndOf="@+id/img_mie"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <TextView
            android:id="@+id/minuman"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|bottom"
            android:text="@string/text_minuman"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="@+id/img_minuman"
            app:layout_constraintStart_toStartOf="@+id/img_minuman"
            app:layout_constraintTop_toBottomOf="@+id/img_minuman" />

        <ImageView
            android:id="@+id/img_snack"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="24dp"
            android:scaleType="centerCrop"
            android:src="@drawable/snack"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/img_minuman"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <TextView
            android:id="@+id/snack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|bottom"
            android:text="@string/text_snack"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="@+id/img_snack"
            app:layout_constraintStart_toStartOf="@+id/img_snack"
            app:layout_constraintTop_toBottomOf="@+id/img_snack" />

<!--    End of Category Section-->

<!--    ListMenu Section-->

        <TextView
            android:id="@+id/list_menu_makanan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="24dp"
            android:text="@string/text_list_menu_makanan"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ayam" />

        <ImageButton
            android:id="@+id/btn_list"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_alignParentEnd="true"
            android:background="@android:color/transparent"
            android:contentDescription="List Button"
            android:src="@drawable/ic_grid"
            app:layout_constraintBottom_toBottomOf="@+id/list_menu_makanan"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/list_menu_makanan" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_menu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/list_menu_makanan"
            tools:listitem="@layout/menu_item" />

<!--    End of ListMenu Section-->

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>