<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailMenuFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/iv_gambar_menu"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:scaleType="fitXY"
            android:src="@drawable/burger"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:importantForAccessibility="no"
            android:src="@drawable/ic_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/black" />

        <TextView
            android:id="@+id/txt_nama_makanan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/nama_makanan"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_gambar_menu" />

        <TextView
            android:id="@+id/txtHarga"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/harga"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_gambar_menu" />


        <TextView
            android:id="@+id/txt_deskripsi_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:text="@string/description"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_nama_makanan" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:layout_marginTop="20dp"
            android:background="@android:color/darker_gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_deskripsi_menu"/>

        <ImageView
            android:id="@+id/iv_store"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:importantForAccessibility="no"
            android:src="@drawable/ic_store"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/divider" />

        <TextView
            android:id="@+id/txt_lokasi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:text="@string/lokasi"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/iv_store"
            app:layout_constraintTop_toTopOf="@id/iv_store" />

        <TextView
            android:id="@+id/txt_deskripsi_lokasi"
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/deskripsi_lokasi"
            app:layout_constraintStart_toStartOf="@id/txt_lokasi"
            app:layout_constraintTop_toBottomOf="@id/txt_lokasi" />

        <View
            android:id="@+id/divider2"
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="80dp"
            android:background="@android:color/darker_gray"
            app:layout_constraintBottom_toTopOf="@id/bt_cart"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/bt_cart"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="10dp"
            android:text="@string/tambah_keranjang"
            android:backgroundTint="@color/material_dynamic_tertiary50"
            android:textSize="20sp"
            android:textStyle="bold"
            app:cornerRadius="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="VisualLintButtonSize,TextContrastCheck" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/bt_min"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginBottom="20dp"
            android:layout_marginStart="100dp"
            android:insetLeft="0dp"
            android:insetTop="0dp"
            android:insetRight="0dp"
            android:insetBottom="0dp"
            android:padding="0dp"
            android:text="-"
            android:textSize="20sp"
            android:textStyle="bold"
            app:iconGravity="textStart"
            app:iconPadding="0dp"
            app:layout_constraintBottom_toTopOf="@+id/bt_cart"
            app:layout_constraintEnd_toStartOf="@+id/tv_number"
            app:layout_constraintStart_toStartOf="parent"
            app:strokeColor="@color/material_dynamic_tertiary50"
            app:strokeWidth="2dp"
            tools:ignore="TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/tv_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="1"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/bt_cart"
            app:layout_constraintTop_toTopOf="@+id/bt_min"
            app:layout_constraintStart_toEndOf="@id/bt_min"
            app:layout_constraintEnd_toStartOf="@id/bt_plus"
            tools:layout_editor_absoluteX="200dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/bt_plus"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginBottom="20dp"
            android:layout_marginEnd="100dp"
            android:insetLeft="0dp"
            android:insetTop="0dp"
            android:insetRight="0dp"
            android:insetBottom="0dp"
            android:padding="0dp"
            android:text="+"
            android:textSize="20sp"
            android:textStyle="bold"
            app:iconGravity="textStart"
            app:iconPadding="0dp"
            app:layout_constraintBottom_toTopOf="@+id/bt_cart"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_number"
            app:strokeColor="@color/material_dynamic_tertiary50"
            app:strokeWidth="2dp"
            tools:ignore="TouchTargetSizeCheck" />






    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>